--- a/microservicio-alumnos/pom.xml
+++ b/microservicio-alumnos/pom.xml
@@ -59,6 +59,11 @@
             <version>1.4.2.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
