--- a/microservicio-alumnos/src/main/resources/application.properties
+++ b/microservicio-alumnos/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=servicio-alumnos
 server.port=1913
 
+spring.datasource.url=jdbc:mysql://localhost:3306/mentoreo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
 
+logging.level.org.hibernate.SQL=debug
