--- a/microservicio-alumnos/src/main/resources/application.properties
+++ b/microservicio-alumnos/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=1913
 spring.datasource.url=jdbc:mysql://localhost:3306/mentoreo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=debug
