--- a/microservicio-alumnos/src/main/resources/application.properties
+++ b/microservicio-alumnos/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.application.name=servicio-alumnos
+spring.application.name=service-students
 server.port=1913
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mentoreo?useSSL=false
 spring.datasource.username=root
