--- a/microservicio-alumnos/src/main/resources/application.properties
+++ b/microservicio-alumnos/src/main/resources/application.properties
@@ -1,13 +1,7 @@
 spring.application.name=service-students
-server.port=1913
+
+server.port=1914
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/mentoreo?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto= create
-spring.jpa.show-sql=true
-
-logging.level.org.hibernate.SQL=debug
+spring.config.import=optional:configserver:
